# python-for-ai

./: README.md  sample.env
10_fastapi/: README.md  main.py  pyproject.toml
11_databases/: sqlite_basics.ipynb
12_project_feedback_analyzer/: README.md  app.py  pyproject.toml
1_datatypes_functions/: datatypes_and_for_loop.ipynb
2_functions/: functions.ipynb
3_classes_overview/: classes.ipynb
4_call_llm/: app.py  simple_llm_call.ipynb
5_error_handling/: error_handling.ipynb
6_chatbot_memory/: app.py  chatbot.ipynb
7_structured_output/: structured_output.ipynb
8_files/: files.ipynb  meeting.txt
9_calling_apis/: calling_apis.ipynb
